--- a/src/app/restaurent/pages/login/login.component.html
+++ b/src/app/restaurent/pages/login/login.component.html
@@ -5,7 +5,7 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <button type="button" id="close" class="close" data-dismiss="modal">&times;</button>
         <h2>Welcome Back! Please Sign In</h2>
         <h6>New to BellyMelly? <a  data-toggle="modal" data-target="#registerModal" data-dismiss="modal" class="text-link" style="color: #0d95e8">Register here</a></h6>
       </div>
@@ -39,7 +39,7 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <button type="button" id="close2"  class="close" data-dismiss="modal">&times;</button>
         <h2>Welcome Back! Please Sign In</h2>
         <h6>New to BellyMelly? <a data-toggle="modal" data-target="#registerModal" data-dismiss="modal" class="text-link" style="color: #0d95e8">Register here</a></h6>
       </div>
@@ -278,7 +278,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title">Signup</h4>
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <button type="button" id="close3" class="close" data-dismiss="modal">&times;</button>
           </div>
           <div class="modal-body">
             <h6 *ngIf="findCountry" >Enter OTP sent to your phone.</h6>
