--- a/src/app/restaurent/base-layout/cart/cart.component.html
+++ b/src/app/restaurent/base-layout/cart/cart.component.html
@@ -96,7 +96,7 @@
 
     </div>
   </div>
-  <div class="mobile-view" fxHide fxShow.sm fxShow.xs>
+  <div *ngIf="getCartItem()" class="mobile-view" fxHide fxShow.sm fxShow.xs>
     <div [hidden]="getCartItem() < 1"  class="cart" fxFlex="row" fxLayoutAlign="space-between center">
       <div class="left">
         <ul class="list-unstyled p-0 m-0" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
@@ -196,7 +196,7 @@
         <!-- Modal Header -->
         <div class="modal-header border-0">
           <div class="close-btn">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <button type="button" id="closee" class="close" data-dismiss="modal">&times;</button>
           </div>
           
         </div>
