--- a/src/app/restaurent/base-layout/cart/cart.component.scss
+++ b/src/app/restaurent/base-layout/cart/cart.component.scss
@@ -433,3 +433,531 @@ padding: 10px;
   overflow-x: hidden;
   overflow-y: auto;
 }
+
+@import "../../../../assets/css/variables";
+.fancybox-slide{
+  .animated-modal {
+    max-width: 550px;
+    border-radius: 4px;
+    overflow: hidden;
+    transform: translateY(-50px);
+    transition: all .7s;
+    h2, p{
+      transform: translateY(-50px);
+      opacity: 0;
+      transition-property: transform, opacity;
+      transition-duration: .4s;
+    }
+    h2{
+      transition-delay: .1s;
+    }
+    p{
+      transition-delay: .3s;
+    }
+  }
+  &.fancybox-slide--current{
+    .animated-modal, h2, p{
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+}
+.modal-customization{
+  .left{
+    @media (max-width: 767px) {
+      display: none;
+    }
+  }
+  .right{
+    @media (max-width: 767px) {
+      width: 100%;
+    }
+    .login-form-box{
+      padding: 1rem;
+      min-width: 350px;
+      color: #fff;
+      @media (max-width: 767px) {
+        min-width: 1px;
+      }
+      .title{
+        h6.title-heading{
+          &::before{
+            background: #ffffff;
+          }
+        }
+        h6{
+          color: $dark-black;
+        }
+      }
+      form{
+        .form-control{
+          background: #d3d3d34a;
+
+          border-color: 1px solid lightgrey;
+          border-radius: 3px;
+          outline: none;
+          color: grey;
+          &:focus{
+            outline: none;
+            box-shadow: none;
+          }
+        }
+        a{
+          color: grey;
+        }
+        button{
+          background: white;
+          color: $purple;
+          border:2px solid $purple;
+        }
+      }
+    }
+    .social-login{
+      list-style: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      margin: 0;
+      li{
+        margin-right: 10px;
+        &:last-child{
+          margin-right: 0px;
+        }
+        a{
+          span{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 65px;
+            width: 65px;
+            border-radius: 50px;
+            background: #4267b2;
+            color: white;
+            border-color: #4267b2;
+            transition: all ease-in-out .3s;
+            &.fb{
+              background: #4267b2;
+              color: white;
+              border-color: #4267b2;
+            }
+            &.google{
+              background: #DC4E41;
+              color: white;
+              border-color: #DC4E41;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 767px) {
+  .fancybox-content{
+    min-width: 95%;
+  }
+}
+
+.modal{
+  background-color: #0000008c;
+}
+
+// .modal-dialog {
+//   min-height: calc(100vh - 60px);
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   overflow: auto;
+// }
+
+.msg{
+  font-size: 13px;
+  line-height: 1.4;
+  text-align: center;
+  color: #666666;
+}
+.fb nb-icon {
+  font-size: 1.9rem !important;
+  line-height: 1;
+  width: 1em;
+  height: 1em;
+}
+.google nb-icon {
+  font-size: 1.9rem !important;
+  line-height: 1;
+  width: 1em;
+  height: 1em;
+}
+#sendOtpSignupModal{
+  .modal-body{
+    padding: 0;
+    .mobile-form{
+      padding: 1rem;
+      display: flex;
+      align-items: center;
+      .form-control{
+        background: #d3d3d34a;
+        border-color: 1px solid lightgrey;
+        border-radius: 3px;
+        outline: none;
+        color: grey;
+        &:focus{
+          outline: none;
+          box-shadow: none;
+        }
+      }
+    }
+    button.close{
+      position: absolute;
+      right: 10px;
+      z-index: 1;
+      top: 0;
+    }
+    .right-img{
+      height: 324px;
+    }
+    .title{
+      margin-bottom: 25px;
+      h1{
+        font-weight: 700;
+        font-family: "Open Sans", sans-serif !important;
+        margin: 0;
+      }
+    }
+  }
+}
+
+
+
+
+.authenticate{
+  .modal-dialog{
+    .modal-header{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 11rem;
+      padding: 1.5rem;
+      overflow: hidden;
+      text-align: center;
+      background-color: #e91e6324;
+      background-image: url(../../../../assets/images/peach-top-right-small.png),url(../../../../assets/images/purple-bottom-left-small.png);
+      background-position: 100% 0,0 100%;
+      background-repeat: no-repeat,no-repeat;
+      .close{
+        position: absolute;
+        right: 7px;
+        top: 3px;
+      }
+    }
+    .modal-inner{
+      width: 450px;
+      margin: 0 auto;
+      @media (max-width: 767px){
+        width: 95%;
+      }
+      .social-widgets{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        @media (max-width: 767px){
+          flex-direction: column;
+        }
+        li{
+          @media (max-width: 767px){
+            float: left;
+            width: 100%;
+            margin-bottom: 10px;
+          }
+          a{
+            background: #ededed;
+            font-size: 14px;
+            width: 212px;
+            height: 40px;
+            line-height: 40px;
+            padding: 0 0.75rem;
+            color: #3f414c;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 3px;
+            @media (max-width: 767px){
+              width: 100%;
+            }
+            img{
+              margin-right: 10px;
+            }
+          }
+        }
+      }
+    }
+
+  }
+  .nav{
+    li{
+      float: left;
+      width: 50%;
+    }
+  }
+}
+@media (max-width: 767px){
+  .modal-body .card .nav-tabs .nav-item.active {
+    margin-bottom: 0px;
+  }
+}
+.modal {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+li{
+  line-height: 15px;
+}
+::ng-deep .mat-form-field-wrapper{
+  padding-bottom: 5px;
+}
+@media (max-width: 767px){
+  .list-inline-item:not(:last-child) {
+    margin-right: 0;
+  }
+}
+
+
+
+
+.pure-material-textfield-outlined {
+  --pure-material-safari-helper1: rgb(
+                  var(--pure-material-primary-rgb, 33, 150, 243)
+  );
+  position: relative;
+  display: inline-block;
+  padding-top: 6px;
+  font-family: var(
+                  --pure-material-font,
+                  "Roboto",
+                  "Segoe UI",
+                  BlinkMacSystemFont,
+                  system-ui,
+                  -apple-system
+  );
+  font-size: 16px;
+  line-height: 1.5;
+  overflow: hidden;
+}
+
+/* Input, Textarea */
+.pure-material-textfield-outlined > input,
+.pure-material-textfield-outlined > textarea {
+  box-sizing: border-box;
+  margin: 0;
+  border: solid 1px; /* Safari */
+  border-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.6);
+  border-top-color: transparent;
+  border-radius: 4px;
+  padding: 15px 13px 15px;
+  width: 100%;
+  height: inherit;
+  color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.87);
+  background-color: transparent;
+  box-shadow: none; /* Firefox */
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  caret-color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
+  transition: border 0.2s, box-shadow 0.2s;
+}
+
+/* Span */
+.pure-material-textfield-outlined > input + span,
+.pure-material-textfield-outlined > textarea + span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  border-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.6);
+  width: 100%;
+  max-height: 100%;
+  color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.6);
+  font-size: 75%;
+  line-height: 15px;
+  cursor: text;
+  transition: color 0.2s, font-size 0.2s, line-height 0.2s;
+}
+
+/* Corners */
+.pure-material-textfield-outlined > input + span::before,
+.pure-material-textfield-outlined > input + span::after,
+.pure-material-textfield-outlined > textarea + span::before,
+.pure-material-textfield-outlined > textarea + span::after {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  margin-top: 6px;
+  border-top: solid 1px;
+  border-top-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.6);
+  min-width: 10px;
+  height: 8px;
+  pointer-events: none;
+  box-shadow: inset 0 1px transparent;
+  transition: border-color 0.2s, box-shadow 0.2s;
+}
+
+.pure-material-textfield-outlined > input + span::before,
+.pure-material-textfield-outlined > textarea + span::before {
+  margin-right: 4px;
+  border-left: solid 1px transparent;
+  border-radius: 4px 0;
+}
+
+.pure-material-textfield-outlined > input + span::after,
+.pure-material-textfield-outlined > textarea + span::after {
+  flex-grow: 1;
+  margin-left: 4px;
+  border-right: solid 1px transparent;
+  border-radius: 0 4px;
+}
+
+/* Hover */
+.pure-material-textfield-outlined:hover > input,
+.pure-material-textfield-outlined:hover > textarea {
+  border-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.87);
+  border-top-color: transparent;
+}
+
+.pure-material-textfield-outlined:hover > input + span::before,
+.pure-material-textfield-outlined:hover > textarea + span::before,
+.pure-material-textfield-outlined:hover > input + span::after,
+.pure-material-textfield-outlined:hover > textarea + span::after {
+  border-top-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.87);
+}
+
+.pure-material-textfield-outlined:hover > input:not(:focus):placeholder-shown,
+.pure-material-textfield-outlined:hover
+> textarea:not(:focus):placeholder-shown {
+  border-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.87);
+}
+
+/* Placeholder-shown */
+.pure-material-textfield-outlined > input:not(:focus):placeholder-shown,
+.pure-material-textfield-outlined > textarea:not(:focus):placeholder-shown {
+  border-top-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.6);
+}
+
+.pure-material-textfield-outlined > input:not(:focus):placeholder-shown + span,
+.pure-material-textfield-outlined
+> textarea:not(:focus):placeholder-shown
++ span {
+  font-size: inherit;
+  line-height: 68px;
+}
+
+.pure-material-textfield-outlined
+> input:not(:focus):placeholder-shown
++ span::before,
+.pure-material-textfield-outlined
+> textarea:not(:focus):placeholder-shown
++ span::before,
+.pure-material-textfield-outlined
+> input:not(:focus):placeholder-shown
++ span::after,
+.pure-material-textfield-outlined
+> textarea:not(:focus):placeholder-shown
++ span::after {
+  border-top-color: transparent;
+}
+
+/* Focus */
+.pure-material-textfield-outlined > input:focus,
+.pure-material-textfield-outlined > textarea:focus {
+  border-color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
+  border-top-color: transparent;
+  box-shadow: inset 1px 0 var(--pure-material-safari-helper1),
+  inset -1px 0 var(--pure-material-safari-helper1),
+  inset 0 -1px var(--pure-material-safari-helper1);
+  outline: none;
+}
+
+.pure-material-textfield-outlined > input:focus + span,
+.pure-material-textfield-outlined > textarea:focus + span {
+  color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
+}
+
+.pure-material-textfield-outlined > input:focus + span::before,
+.pure-material-textfield-outlined > input:focus + span::after,
+.pure-material-textfield-outlined > textarea:focus + span::before,
+.pure-material-textfield-outlined > textarea:focus + span::after {
+  border-top-color: var(--pure-material-safari-helper1) !important;
+  box-shadow: inset 0 1px var(--pure-material-safari-helper1);
+}
+
+/* Disabled */
+.pure-material-textfield-outlined > input:disabled,
+.pure-material-textfield-outlined > input:disabled + span,
+.pure-material-textfield-outlined > textarea:disabled,
+.pure-material-textfield-outlined > textarea:disabled + span {
+  border-color: rgba(
+                  var(--pure-material-onsurface-rgb, 0, 0, 0),
+                  0.38
+  ) !important;
+  border-top-color: transparent !important;
+  color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.38);
+  pointer-events: none;
+}
+
+.pure-material-textfield-outlined > input:disabled + span::before,
+.pure-material-textfield-outlined > input:disabled + span::after,
+.pure-material-textfield-outlined > textarea:disabled + span::before,
+.pure-material-textfield-outlined > textarea:disabled + span::after {
+  border-top-color: rgba(
+                  var(--pure-material-onsurface-rgb, 0, 0, 0),
+                  0.38
+  ) !important;
+}
+
+.pure-material-textfield-outlined > input:disabled:placeholder-shown,
+.pure-material-textfield-outlined > input:disabled:placeholder-shown + span,
+.pure-material-textfield-outlined > textarea:disabled:placeholder-shown,
+.pure-material-textfield-outlined > textarea:disabled:placeholder-shown + span {
+  border-top-color: rgba(
+                  var(--pure-material-onsurface-rgb, 0, 0, 0),
+                  0.38
+  ) !important;
+}
+
+.pure-material-textfield-outlined
+> input:disabled:placeholder-shown
++ span::before,
+.pure-material-textfield-outlined
+> input:disabled:placeholder-shown
++ span::after,
+.pure-material-textfield-outlined
+> textarea:disabled:placeholder-shown
++ span::before,
+.pure-material-textfield-outlined
+> textarea:disabled:placeholder-shown
++ span::after {
+  border-top-color: transparent !important;
+}
+
+/* Faster transition in Safari for less noticable fractional font-size issue */
+@media not all and (min-resolution: 0.001dpcm) {
+  @supports (-webkit-appearance: none) {
+    .pure-material-textfield-outlined > input,
+    .pure-material-textfield-outlined > input + span,
+    .pure-material-textfield-outlined > textarea,
+    .pure-material-textfield-outlined > textarea + span,
+    .pure-material-textfield-outlined > input + span::before,
+    .pure-material-textfield-outlined > input + span::after,
+    .pure-material-textfield-outlined > textarea + span::before,
+    .pure-material-textfield-outlined > textarea + span::after {
+      transition-duration: 0.1s;
+    }
+  }
+}
+.password-view{
+  .icon{
+    position: absolute;
+    top: 20px;
+    right: 12px;
+  }
+}
