--- a/src/app/restaurent/pages/register/register.component.html
+++ b/src/app/restaurent/pages/register/register.component.html
@@ -2,9 +2,9 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <button type="button" class="close" (click)="goback()" data-dismiss="modal">&times;</button>
         <h2>Welcome Back! Please Register Here</h2>
-        <h6>Already on BellyMelly? <a href="javascript:void(0);" data-toggle="modal" data-target="#loginModal" data-dismiss="modal" class="text-link" style="color: #0d95e8">Login here</a></h6>
+        <h6>Already on BellyMelly? <a href="javascript:void(0);" data-toggle="modal" data-target="#loginModal" data-dismiss="modal" (click)="goback()" class="text-link" style="color: #0d95e8">Login here</a></h6>
       </div>
       <div class="modal-body">
         <div class="modal-inner">
