--- a/src/app/restaurent/base-layout/header/header.component.html
+++ b/src/app/restaurent/base-layout/header/header.component.html
@@ -62,7 +62,7 @@
     </div>
   </div>
 </div>
-<app-location-sidebar *ngIf="showlocation" (currentAddress)="getCurrentAddr($event)"></app-location-sidebar>
+<!--<app-location-sidebar *ngIf="showlocation" (currentAddress)="getCurrentAddr($event)"></app-location-sidebar>-->
 <!--<app-add-address></app-add-address>-->
 <app-login></app-login>
 <app-register></app-register>
