--- a/src/app/restaurent/base-layout/header/header.component.html
+++ b/src/app/restaurent/base-layout/header/header.component.html
@@ -50,7 +50,7 @@
               </div>
             </div>
             <div *ngIf="!isLogin">
-              <button type="button" class="btn btn-sm btn-site px-3" data-toggle="modal" id="openLoginModalBtn" data-target="#loginModal">
+              <button type="button" class="btn btn-sm btn-link text-dark px-3" data-toggle="modal" id="openLoginModalBtn" data-target="#loginModal">
                  <!--<aside data-fancybox data-src="#loginModal" id="openLoginModalBtn"><b class="ml-1">Login</b></aside>-->
                 Login
               </button>
