--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <main class="sticker">
   <router-outlet></router-outlet>
 </main>
-<ngx-spinner
+<!--<ngx-spinner
   bdOpacity = 0.9
   bdColor = "rgba(51,51,51,0.80)"
   size = "medium"
@@ -14,7 +14,7 @@
   [fullScreen] = "true"
 >
   <p style="color: white" > Loading... </p>
-</ngx-spinner>
+</ngx-spinner>-->
 
 <div *ngIf="showPopUp || (showPopUp == true)" style="z-index: 9999" class="card app-open-option">
   <style>
