--- a/src/app/restaurent/base-layout/body/body.component.html
+++ b/src/app/restaurent/base-layout/body/body.component.html
@@ -1,6 +1,6 @@
 <nb-layout>
   <nb-layout-header fixed>
-    <button data-toggle="modal" data-backdrop="false" data-target="#thankyou">show</button>
+   <!-- <button data-toggle="modal" data-backdrop="false" data-target="#thankyou">show</button>-->
 <!-- Modal -->
 <div class="modal fade thankyou show" id="thankyou">
 	<div class="modal-dialog" role="document">
