--- a/src/app/restaurent/pages/home/main-structure/main-structure.component.html
+++ b/src/app/restaurent/pages/home/main-structure/main-structure.component.html
@@ -3,7 +3,7 @@
 
 <div class="wrapper" id="wrapper">
 
-  <div class="top-banner">
+  <div style="min-height: 180px; background: #F8F8F8" class="top-banner">
     <app-restaurent-info [locationDetails]="getLocationDetail"></app-restaurent-info>
   </div>
   <div class="wrapper-content">
