--- a/src/app/restaurent/pages/us-restaurants/us-restaurants.component.scss
+++ b/src/app/restaurent/pages/us-restaurants/us-restaurants.component.scss
@@ -76,6 +76,15 @@
   align-items: center;
   
 }
+
+img.animated-gif{
+ // width: 500px;
+
+}
+.bck {
+  min-height: 130px;
+  background: #F8F8F8
+}
 .btn-outline-primary-site:hover{
 	background: #f03f37;
   border-color: #f03f37;
