--- a/src/app/restaurent/base-layout/body/body.component.html
+++ b/src/app/restaurent/base-layout/body/body.component.html
@@ -56,7 +56,7 @@
           <div class="h3 text-dark">Thank You</div>
           
         </div>
-        <button class="btn btn-dark btn-block rounded-0">Start New Order</button>
+        <button class="btn btn-dark btn-block rounded-0" data-dismiss="modal">Start New Order</button>
 			</div>
 			
 		</div>
