--- a/src/app/restaurent/pages/coupons/coupons.component.scss
+++ b/src/app/restaurent/pages/coupons/coupons.component.scss
@@ -62,7 +62,7 @@
                   color: $purple;
                   margin-bottom: 0;
                   span{
-                    margin-left: 15px;
+                    // margin-left: 15px;
                     font-size: 11px;
                     text-transform: uppercase;
                     background: #FFF8E6;
