--- a/src/app/restaurent/pages/coupons/coupons.component.html
+++ b/src/app/restaurent/pages/coupons/coupons.component.html
@@ -13,7 +13,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="col-sm-12 py-3">
+        <!-- <div class="col-sm-12 py-3">
           <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Enter Promo Code">
             <div class="input-group-append">
@@ -21,7 +21,7 @@
               </button>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-sm-12 title">
           <h6>Available Coupons</h6>
         </div>
