changes done given on skype

--- a/src/app/restaurent/base-layout/header/restaurent-info/restaurent-info.component.html
+++ b/src/app/restaurent/base-layout/header/restaurent-info/restaurent-info.component.html
@@ -129,8 +129,7 @@
               <img src="assets/images/distance.svg"> <p class="m-0">{{distance}}Miles</p>
             </div>
           </li>
-          <b class="text-center" style="    font-size: 25px !important; font-weight: 550; color: black;margin-right: 234px;
-}" *ngIf="dineinExist">Categories</b>
+          <b class="text-center" style="font-size: 25px !important; font-weight: 550; color: black;margin-right: 234px;" *ngIf="dineinExist">Categories</b>
         </ul>
         
         
