--- a/src/app/restaurent/base-layout/body/body.component.html
+++ b/src/app/restaurent/base-layout/body/body.component.html
@@ -1,6 +1,6 @@
 <nb-layout>
   <nb-layout-header fixed>
-   <!-- <button data-toggle="modal" data-backdrop="false" data-target="#thankyou">show</button>-->
+    <!--<button data-toggle="modal" data-backdrop="false" data-target="#thankyou">show</button>-->
 <!-- Modal -->
 <div class="modal fade thankyou show" id="thankyou">
 	<div class="modal-dialog" role="document">
@@ -11,12 +11,12 @@
 			<div class="modal-body text-center">
 				
         <div class="row">
-          <div class="col-lg-12 text-left text-dark mb-0 h2 font-weight-boldest">Track Order</div>
+          <div class="col-lg-12 text-left text-dark mb-0 h2 font-weight-boldest">Thanks for your order!</div>
           <div class="col-lg-12 text-dark d-flex align-items-center justify-content-between mb-4">
             <p class="mb-0"><span class="text-muted">Order ID:</span> 123456789</p>
             <p class="mb-0"><small>Amount:</small><span class="font-weight-bold">345</span><small>.00</small></p>
           </div>
-          <div class="col-lg-12 font-weight-bold text-left">ETA: 15 MIN</div>
+          <div class="col-lg-12 font-weight-bold text-left">Order Ready In: 15 MIN</div>
         </div>
 				<div class="timeline py-4">
 					<ul>
@@ -43,7 +43,7 @@
 								<div class="icon mr-2"><img src="assets/images/img-3.svg"></div>
 								<div class="content">
 									<div class="h6 mb-0">Order Ready</div>
-									<p class="mb-0">We will call your Name/Table number or bring it to you when ready</p>
+									<p class="mb-0">We will call your Name OR bring the food to your table when it's ready</p>
 								</div>
 							</div>
 						</li>
