--- a/src/app/restaurent/base-layout/header/header.component.html
+++ b/src/app/restaurent/base-layout/header/header.component.html
@@ -36,7 +36,7 @@
             </span>
           </div>
         </div>
-        <div class="right">
+        <div class="right" *ngIf="showLogin">
           <div class="Login-user">
             <div *ngIf="isLogin" class="dropdown">
               <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
