--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -126,7 +126,7 @@
                     <div *ngIf="placeOrderBody.data.orderData.ServiceId == 5" class="section-content1 ">
                       <div class="row">
                         <div class="col-md-12">
-                          <label>Please Enter Your Table Number: </label>
+                          <label>Please Enter Your Table Number OR Name </label>
                           <div class="row">
                             <div class="col-md-6">
                               <input type="text" class="form-control" name="table" [(ngModel)]="DineInTableNum">
@@ -344,7 +344,7 @@
                 </div>
                 <div *ngIf="!itemList.length" class="added-items py-4">
                   <div class="text-center">
-                    <img src="assets/images/empty-cart1-png.png" alt="" width="50%">
+                    <img src="assets/img/animation_200_kh5y7snw.gif" alt="" width="50%">
                   </div>
                 </div>
                 <div *ngFor="let item of itemList; let i = index" class="added-items" style="border-bottom: none;">
@@ -493,7 +493,7 @@
                   </div>
                 </div>
 
-              <div  *ngIf="!flags.isPromoApplied" >
+              <div  *ngIf="!flags.isPromoApplied && placeOrderBody.data.orderData.ServiceId != 5" >
                 <div *ngIf="country.toUpperCase()  == 'AU' || (country.toUpperCase()  == 'US' && placeOrderBody.data.orderData.ServiceId == 5)"
                 class="coupon mb-3" role="button" data-toggle="modal" data-target="#coupon" style="cursor: pointer;">
                 <nb-icon icon="gift-outline" class="mr-3"></nb-icon>
@@ -595,7 +595,7 @@
 
               <div *ngIf="!itemList.length" class="col-lg-12 added-items py-4">
                 <div class="text-center">
-                  <img src="assets/images/empty-cart1-png.png" alt="" width="50%">
+                  <img src="assets/img/animation_200_kh5y7snw.gif" alt="" width="50%">
                 </div>
               </div>
             </div>
@@ -784,7 +784,7 @@
           </div>
         </div>
         
-        <div class="similar-items py-2">
+        <div *ngIf="locationDetails.likePrdoucts.length > 0" class="similar-items py-2">
           <div class="container">
             <div class="row">
               <div class="col-md-12" *ngIf="locationDetails.likePrdoucts.length > 0">
@@ -847,6 +847,20 @@
             </div>
           </div>
         </div>
+        <div class="table-book py-2" *ngIf="placeOrderBody.data.orderData.ServiceId == 5">
+          <div class="container">
+            <div class="row">
+              <div  class="col-md-12">
+                <div class="section-content1 ">
+                  <div class="d-flex align-items-center">
+                    <span class="mr-2"><nb-icon icon="layers-outline"></nb-icon></span>
+                    <input type="text" class="form-control" name="table" (keyup)="tableF($event.target.value)" placeholder="Please Enter Your Table Number OR Name">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="give-tip" *ngIf="placeOrderBody.data.orderData.ServiceId == 2 || placeOrderBody.data.orderData.ServiceId == 5">
           <div class="container">
             <div class="row">
@@ -889,7 +903,7 @@
             </div>
           </div>
         </div>
-        <div class="apply-coupon"  *ngIf="!flags.isPromoApplied" >
+        <div class="apply-coupon"  *ngIf="!flags.isPromoApplied && placeOrderBody.data.orderData.ServiceId != 5" >
           <div class="container" *ngIf="country.toUpperCase()  == 'AU' || (country.toUpperCase()  == 'US' && placeOrderBody.data.orderData.ServiceId == 5)">
             <div class="row">
               <div class="col-lg-12">
@@ -1057,20 +1071,7 @@
           </div>
         </div>
       </div>
-      <div class="table-book py-2" *ngIf="placeOrderBody.data.orderData.ServiceId == 5">
-        <div class="container">
-          <div class="row">
-            <div  class="col-md-12">
-              <div class="section-content1 ">
-                <div class="d-flex align-items-center">
-                  <span class="mr-2"><nb-icon icon="layers-outline"></nb-icon></span>
-                  <input type="text" class="form-control" name="table" (keyup)="tableF($event.target.value)" placeholder="Please Enter Your Table Number:">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> 
+
       <div class="choose-organization py-2" *ngIf="ngoData.length > 0 && placeOrderBody.data.orderData.ServiceId != 5">
         <div class="container">
           <div class="row">
